syntax = "proto3";

package auditSafetyLog;

service AuditSafetyLog {
    rpc Index(Request) returns (Response) {}
}

message Request {
    int32    id = 1;
    string   works_id = 2;
    string   scene = 3;
    string   type = 4;
    int32    uid = 5;
    int32    limit = 6;
    int32    offset = 7;
}

message AuditSafetyLogBracket{
    int32    id = 1;
    int32    uid = 2;
    string   works_id = 3;
    string   reason = 4;
    string   type = 5;
    string   create_time = 6;
    string   scene = 7;
    string   content = 8;
}

message Response {
    repeated AuditSafetyLogBracket data = 12;
    int32 total = 13;
}